fix(hero): no heading line truncate for hero level 3

--- a/components/hero/src/Hero.module.scss
+++ b/components/hero/src/Hero.module.scss
@@ -37,6 +37,10 @@ $hero-breakpoint-sm: 769px;
     }
   }
 
+  &--light .title {
+    -webkit-line-clamp: inherit;
+  }
+
   .container {
     height: 100%;
   }
